force-app/main/default/objects/Movie_Films__c/Movie_Films__c.object-meta.xml
<CustomObject>
    <label>Movie Films</label>
    <nameField>
        <label>Movie Films Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Movie Films</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>