force-app/main/default/objects/Movie_Films__c/fields/Commentary__c.field-meta.xml
<CustomField>
    <fullName>Commentary__c</fullName>
    <label>Commentary</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>