force-app/main/default/objects/Movie_Films__c/fields/Creator__c.field-meta.xml
<CustomField>
    <fullName>Creator__c</fullName>
    <label>Creator</label>
    <type>TextArea</type>
</CustomField>